# Document

./: checkfolder.cpp
GetEventTool/: CMakeLists.txt
GetEventTool/Json_Event/10.2.21.8/: firedetect.txt  license.txt  personcount.txt
GetEventTool/Json_Event/10.2.64.62/: distancing.txt  face.txt  facedetect.txt  facemask.txt
GetEventTool/config/: config.json  type
GetEventTool/local/lib/: libopencv_aruco.so.4.2.0  libopencv_bgsegm.so.4.2  libopencv_bioinspired.so.4.2  libopencv_calib3d.so.4.2  libopencv_ccalib.so.4.2  libopencv_datasets.so.4.2.0  libopencv_dnn_objdetect.so.4.2  libopencv_dnn_superres.so.4.2  libopencv_dpm.so.4.2  libopencv_face.so.4.2.0  libopencv_flann.so.4.2.0  libopencv_fuzzy.so.4.2  libopencv_highgui.so.4.2.0  libopencv_line_descriptor.so.4.2.0  libopencv_ml.so.4.2.0  libopencv_objdetect.so.4.2.0  libopencv_optflow.so.4.2.0  libopencv_phase_unwrapping.so.4.2.0  libopencv_rgbd.so.4.2  libopencv_saliency.so.4.2.0  libopencv_shape.so.4.2.0  libopencv_stereo.so.4.2  libopencv_stitching.so.4.2.0  libopencv_structured_light.so.4.2  libopencv_superres.so.4.2.0  libopencv_surface_matching.so.4.2  libopencv_text.so.4.2  (+8 more)
GetEventTool/src/: CountEvent.cpp  CountEvent.hpp  CountProcessor.cpp  CountProcessor.hpp  CowProcessor.hpp  DistancingEvent.cpp  DistancingEvent.hpp  DistancingProcessor.cpp  DistancingProcessor.hpp  FaceDetectEvent.cpp  FaceDetectEvent.hpp  FaceDetectProcessor.cpp  FaceEvent.cpp  FaceEvent.hpp  FaceMaskEvent.cpp  FaceMaskEvent.hpp  FaceMaskProcessor.cpp  FaceMaskProcessor.hpp  FaceProcessor.cpp  FaceProcessor.hpp  FireEvent.cpp  FireEvent.hpp  FireProcessor.cpp  FireProcessor.hpp  GetImageEngine.cpp  GetImageEngine.hpp  GlobalConfig.cpp  GlobalConfig.hpp  HttpSession.cpp  LicenseEvent.cpp  LicenseEvent.hpp  LicenseProcessor.cpp  LicenseProcessor.hpp  Load.cpp  Load.hpp  ObjectEvent.cpp  ObjectEvent.hpp  config.json  license_backup.txt  main.cpp  (+1 more)
showEvent/: CMakeLists.txt
showEvent/Config/: CameraID  README.txt  config.json  config3.json  empty
showEvent/src/: main.cpp
(+465 files in other folders)
